# onetimesecret

./: .dockerignore  .env.empty  .env.example  .env.reference  .env.sh  .env.test.example  .git-blame-ignore-revs  .gitattributes  .gitignore  .intlifyignore  .npmrc  .oci-build.json  .pr_agent.toml  .pre-commit-config.yaml  .pre-push-config.yaml  .prettierignore  .prettierrc  .prompts  .rspec  .rubocop.yml  .rubocop_todo.yml  .simplecov  875-behaviour-implelemetation.md  875-complete-description-of-previous.md  875-plan.md  ADMIN_INTERFACE_IMPACT_ANALYSIS.md  ADMIN_INTERFACE_VALIDATION.md  ADMIN_REFACTORING_SUMMARY.md  BILLING_CODE_REVIEW.md  BILLING_TERMINOLOGY_IMPLEMENTATION_PLAN.md  BUILD.yml  CAPABILITY_IMPLEMENTATION_SUMMARY.md  CHANGELOG.rst  CLAUDE.md  CLAUDE_RSFC.md  CODE_OF_CONDUCT.md  CODE_SMELLS_REPORT.md  CODE_SMELLS_REVIEW.md  COLONEL_API_VERIFICATION.md  CONTRIBUTING.md  (+107 more)
locales/: .gitignore  AGENT_TRANSLATION_PROTOCOL.md  BATCH_OPERATIONS.md  README.md  TRANSLATION_PROTOCOL.md  pyproject.toml
locales/.resolved/: de_AT.json  fr_CA.json
locales/analysis/: README.analysis.md  account-billing.analysis.md  account.analysis.md  colonel.analysis.md  dashboard.analysis.md  email.analysis.md  error-pages.analysis.md  feature-branding.analysis.md  feature-domains.analysis.md  feature-feedback.analysis.md  feature-regions.analysis.md  feature-secrets.analysis.md  feature-testimonials.analysis.md  feature-translations.analysis.md  homepage.analysis.md
locales/db/: .gitignore  checksums.sha256  glossary.sql  schema.sql  schema_migrations.sql  session_log.sql  (+1 more)
(+11730 files in other folders)
